# StormEvents

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  quick_test.yml  test.yml  test_quick.yml  tests.yml  tests_simple.yml
docs/source/: conf.py  coops.rst  index.rst  installation.rst  nhc.rst  stormevent.rst  usgs.rst  utilities.rst  vortex.rst
examples/: example_1.html  example_1.ipynb  example_2.ipynb
modelforcings/: utilities.py  vortex.py
stormevents/: __init__.py  highwatermarks.py  stormevent.py  storms.py  tidalstations.py  track.py  tracks.py  utilities.py  vortex.py
stormevents/coops/: __init__.py  tidalstations.py
stormevents/nhc/: __init__.py  atcf.py  const.py  storms.py  track.py
stormevents/usgs/: __init__.py  base.py  events.py  highwatermarks.py  sensors.py  stations.py
tests/: __init__.py  test_atcf.py  test_besttrack.py  test_coops.py  test_nhc.py  test_pcfill.py  test_stormevent.py  test_track.py  test_usgs.py  test_utilities.py  test_vortex.py
tests/data/input/test_usgs_flood_event/: florence2018.csv
tests/data/input/test_vortex_track_no_internet/: fort.22
tests/data/reference/: scratch_3.py
tests/data/reference/test_COOPS_Station/: station1612340_constituents.csv  station1612480_constituents.csv
tests/data/reference/test_HighWaterMarks/: florence2018.csv
tests/data/reference/test_HurricaneHighWaterMarks/: florence2018.csv
tests/data/reference/test_StormHighWaterMarks/: florence2018.csv
tests/data/reference/test_VortexTrack/: ike2008.fort.22  irene2011.fort.22  irma2017.fort.22  maria2017.fort.22  michael2018.fort.22
tests/data/reference/test_coops_product_within_region/: data.nc
tests/data/reference/test_coops_station/: station9414458_constituents.csv
tests/data/reference/test_coops_stations/: test_coops_stations.csv
tests/data/reference/test_coops_stations_within_region/: stations.csv
tests/data/reference/test_from_fort22/: irma2017_fort.22
tests/data/reference/test_high_water_marks/: florence2018_hwm.csv
tests/data/reference/test_nhc_gis_storms/: storms.csv
tests/data/reference/test_nhc_storms/: storms.csv
tests/data/reference/test_no_internet/: vortex_1.22  vortex_3.22
tests/data/reference/test_read_atcf/: florence2018_fort.22
tests/data/reference/test_recompute_velocity/: irma2017_fort.22
tests/data/reference/test_storm_event_coops_product_within_isotach/: florence2018_water_levels.nc
tests/data/reference/test_storm_event_high_water_marks/: florence2018_hwm.csv
tests/data/reference/test_storm_event_track/: florence2018.fort.22  ida2021.fort.22
tests/data/reference/test_track/: ida2021.fort.22
tests/data/reference/test_usgs_flood_events/: events.csv
tests/data/reference/test_usgs_flood_storms/: storms.csv
tests/data/reference/test_usgs_highwatermark_events/: events.csv
tests/data/reference/test_usgs_highwatermark_storms/: storms.csv
tests/data/reference/test_vortex/: florence2018.fort.22  harvey2017.fort.22  ike2008.fort.22  irene2011.fort.22  irma2017.fort.22  isabel2003.fort.22  maria2017.fort.22  michael2018.fort.22  sandy2012.fort.22
tests/data/reference/test_vortex_track/: florence2018.fort.22  harvey2017.fort.22  ike2008.fort.22  irene2011.fort.22  irma2017.fort.22  isabel2003.fort.22  maria2017.fort.22  michael2018.fort.22  sandy2012.fort.22
tests/data/reference/test_vortex_track_file_decks/: a-deck_CARQ.22  a-deck_HMON.22  a-deck_HWRF.22  a-deck_OFCL.22  b-deck_BEST.22
tests/data/reference/test_vortex_track_from_file/: florence2018_fort.22  fromatcf_fort.22  irma2017_fort.22
tests/data/reference/test_vortex_track_no_internet/: vortex_2.22  vortex_3.22
tests/data/reference/test_vortex_track_recompute_velocity/: irma2017_fort.22
tests/data/reference/test_vortex_track_to_file/: florence2018.fort.22  florence2018_OFCL.fort.22  florence2018_all.fort.22  florence2018_best.fort.22
tests/data/reference/test_vortex_types/: a-deck_CARQ.22  a-deck_CARQ.txt  a-deck_HMON.22  a-deck_HMON.txt  a-deck_HWRF.txt  a-deck_OFCL.txt  b-deck_BEST.22  b-deck_BEST.txt
