[project]
name = "stormevents"
description = "Python interfaces for observational data surrounding named storm events"
authors = [
    { name = "Zach Burnett", email = "zachary.r.burnett@gmail.com" },
    { name = "Soroosh Mani", email = "Soroosh.Mani@noaa.gov"}
]
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
dependencies = [
    "beautifulsoup4",
    "geopandas",
    "netcdf4",
    "numpy",
    "python-dateutil",
    "pandas",
    "pyproj >=2.6",
    "requests",
    "searvey >=0.2.0,<1.0",
    "shapely >=1.8",
    "typepigeon >=1.0.5, <2",
    "xarray",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ['pytest', 'pytest-cov', 'pytest-socket', 'pytest-xdist']
style = ['black', 'reorder-python-imports']
docs = ['dunamai', 'm2r2', 'sphinx<7', 'sphinx-rtd-theme', 'toml']

[project.urls]
repository = 'https://github.com/oceanmodeling/StormEvents.git'
documentation = 'https://stormevents.readthedocs.io'

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
