[metadata]
name = stormevents
lead_developer = Zachary Burnett
author = Jaime R Calzada, Zachary Burnett, William Pringle
author_email = jreniel@gmail.com, zachary.burnett@noaa.gov, wpringle@anl.gov
description = Python interfaces for observational data surrounding named storm events
long_description = file: README.md
license = GPL
url = https://github.com/zacharyburnettNOAA/StormEvents.git

[nosetests]
exe = True
tests = tests/
