[metadata]
name = stormevents
author = Zach Burnett <zachary.burnett@noaa.gov>, William Pringle <wpringle@anl.gov>, Jaime R Calzada <jreniel@gmail.com>
description = Python interfaces for observational data surrounding named storm events
long_description = file:README.md
long_description_content_type = text/markdown
license = GPL
python_requires = >=3.6
url = https://github.com/noaa-ocs-modeling/StormEvents.git

[options]
install_requires =
    pytest
    beautifulsoup4
    geopandas
    netcdf4
    numpy
    python-dateutil
    pandas
    pyproj >= 2.6
    requests
    shapely
    typepigeon >= 1.0.5
    xarray

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-socket
    pytest-xdist
development =
    flake8
    isort
    oitnb
documentation =
    dunamai
    m2r2
    sphinx
    sphinx-rtd-theme
